--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^4.29.15",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@tanstack/react-query": "^4.35.0",
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
@@ -23,7 +24,8 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
-		"react-redux": "^8.1.1",
+		"react-redux": "^8.1.2",
+		"react-simple-star-rating": "^5.1.7",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.63.6",
 		"tailwindcss": "3.3.2",
